--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,18 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+div{
+   background: black;   
+   margin: auto;
+   text-align: center;
+   color: white;
+   font-size: 90px; 
+   padding: 0;
+ 
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.contador{
+    border: 2px solid gray;
+    border-radius: 25px;
+    width: 220px;
+    height: 155px;
+}
